# Deploying-Deep-Learning-Models-in-C-A-comparison-with-Python-server

./: README.md  test_api.py
models/: generate.py
server-cpp/: CMakeLists.txt  server-app  server.cpp
server-cpp/libs/: infer.cpp  infer.h  opencvutils.cpp  torchutils.cpp  torchutils.h
server-python/: app_jit.py  app_onnx.py  app_pt.py
